# smolsonic

./: .gitignore  Cargo.toml  Cross.toml  README.md  flake.nix  install.sh  smolsonic.example.toml
.github/workflows/: flakehub-publish-tagged.yml  nix.yml  release-bsd-aarch64.yml  release.yml
.tangled/workflows/: build.yml
npm/: .gitignore  .npmignore  README.md  package.json
npm/lib/: download.js  platform.js
npm/scripts/: postinstall.js
s3webui/: README.md  index.html  package.json  vite.config.ts
s3webui/src/: index.css  main.tsx  routeTree.gen.ts
s3webui/src/atoms/: auth.ts  ui.ts
s3webui/src/components/: Sidebar.tsx  Topbar.tsx
s3webui/src/lib/: format.ts  s3.ts
s3webui/src/routes/: _app.browser.tsx  _app.index.tsx  _app.settings.tsx  _app.tsx  _app.upload.tsx  login.tsx
src/: cli.rs  config.rs  db.rs  main.rs  mdns.rs  models.rs  scanner.rs  scrobble.rs  typesense.rs  video_scanner.rs  watcher.rs
src/jellyfin/: auth.rs  discovery.rs  dto.rs  handlers.rs  lyrics.rs  mapping.rs  mod.rs  similar.rs
src/s3/: admin.rs  handlers.rs  mod.rs  sigv4.rs
src/server/: auth.rs  handlers.rs  mod.rs  repo.rs  response.rs
src/upnp/: content_directory.rs  mod.rs  ssdp.rs
