[package]
name = "smolsonic"
version = "0.5.3"
edition = "2021"
description = "A tiny Subsonic-compatible music server"
license = "MIT"
repository = "https://github.com/tsirysndr/smolsonic"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
# Force libsqlite3-sys to vendor + build SQLite from source so cross builds
# don't try to link the host system's libsqlite3.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
walkdir = "2"
lofty = "0.21"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
mime_guess = "2"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
hex = "0.4"
clap = { version = "4", features = ["derive", "color"] }
anstyle = "1"
notify = "8"
notify-debouncer-full = "0.7"
mdns-sd = "0.13"
if-addrs = "0.13"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
